# hero-api

./: .env  Cargo.toml  Makefile  README.md  benchmark.yml  init-pg-db.sql  rocket.toml
migrations/2020-08-01-112747_heroes/: down.sql  up.sql
src/: hero.rs  main.rs  schema.rs
